# unofficial.cubing.net

./: .gitignore  Cargo.toml  Makefile  README.md  biome.json  bun.lockb  comps.txt  index.html  index.js  package.json  rome.json  style.css  unofficial-2003-to-2010.sql
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml  pages.yml
CubingUSANationals2023/: fto.csv  index.html
CubingUSANationals2023/fto/: index.html
admin/: attempt.ts  main.ts
competitions/: index.html
competitions/CubingUSANationals2023/: 333-team-bld.csv  fto.csv  index.html  magic.csv
competitions/CubingUSANationals2023/333-team-bld/: index.html
competitions/CubingUSANationals2023/fto/: index.html
competitions/CubingUSANationals2023/magic/: index.html
competitions/CubingUSAWesternChampionship2021/: fto.csv  index.html
competitions/CubingUSAWesternChampionship2021/fto/: index.html
data/competitions/AachenOpen2010/: competition-info.json
data/competitions/AuroraSummer2009/: competition-info.json
data/competitions/BelgianOpen2009/: competition-info.json
data/competitions/BerkeleySpring2010/: competition-info.json
data/competitions/ChalmersOpen2005/: competition-info.json
data/competitions/ClermontOpen2008/: competition-info.json
data/competitions/ClermontOpen2009/: competition-info.json
data/competitions/CubingUSANationals2023/: competition-info.json
script/: add-competition.ts
src/: main.rs
src/generate/: Round.ts  jsdom.ts  main.ts  path.ts  template.ts
src/generate/data/: attempts.ts  (+5 more)
src/static/: .htaccess  style.css
src/templates/: index.html
(+197 files in other folders)
