[package]
name = "unofficial-cubing-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
csv = "1.2.2"
serde = "1.0.183"
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["mysql", "runtime-async-std"] }

[[bin]]
name = "from_ron"
path = "./src/rust/from_ron/main.rs"
